--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/renzp94/storage#readme",
   "devDependencies": {
+    "@biomejs/biome": "^1.4.1",
     "@types/node": "^17.0.16",
     "tsup": "^5.11.13",
     "typescript": "^4.5.5"
