--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
   "homepage": "https://github.com/renzp94/storage#readme",
   "devDependencies": {
     "@biomejs/biome": "^1.4.1",
-    "@types/node": "^17.0.16",
-    "tsup": "^5.11.13",
-    "typescript": "^4.5.5"
+    "@happy-dom/global-registrator": "^12.10.3",
+    "bun-types": "latest",
+    "tsup": "^8.0.1",
+    "typescript": "^5.3.3"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org",
