--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "tsup --watch src",
     "build": "tsup",
-    "pub": "npm run build && npm publish"
+    "pub": "npm run build && standard-version && npm publish"
   },
   "files": ["lib"],
   "repository": {
@@ -26,6 +26,7 @@
     "@biomejs/biome": "^1.4.1",
     "@happy-dom/global-registrator": "^12.10.3",
     "bun-types": "latest",
+    "standard-version": "^9.5.0",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3"
   },
