--- a/biome.json
+++ b/biome.json
@@ -1,39 +1,31 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.1.2/schema.json",
-  "organizeImports": {
-    "enabled": true
-  },
+  "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
+  "organizeImports": { "enabled": true },
   "linter": {
     "enabled": true,
     "rules": {
       "recommended": true,
-      "correctness": {
-        "noUnusedVariables": "warn"
-      },
-      "style": {
-        "useBlockStatements": "error"
-      },
+      "correctness": { "noUnusedVariables": "warn" },
+      "style": { "useBlockStatements": "error" },
       "suspicious": {
         "noExplicitAny": "off",
         "noExtraNonNullAssertion": "error",
         "noConsoleLog": "warn"
+      },
+      "performance": {
+        "noAccumulatingSpread": "off"
       }
     }
   },
   "javascript": {
-    "formatter": {
-      "semicolons": "asNeeded",
-      "quoteStyle": "single"
-    }
+    "formatter": { "semicolons": "asNeeded", "quoteStyle": "single" }
   },
   "formatter": {
     "enabled": true,
     "formatWithErrors": false,
     "indentStyle": "space",
-    "indentSize": 2,
+    "indentWidth": 2,
     "lineWidth": 80
   },
-  "files": {
-    "ignore": ["lib"]
-  }
+  "files": { "ignore": ["lib"] }
 }
