--- a/package.json
+++ b/package.json
@@ -10,19 +10,15 @@
     "pub:npm": "bun run scripts/pub-npm.ts",
     "pub:jsr": "bun run scripts/pub-jsr.ts",
     "pub:all": "bun run scripts/pub-all.ts",
-    "pub": "npm run build && standard-version && npm publish"
+    "pub": "npm run build && standard-version && npm publish",
+    "coverage": "bun run scripts/coverage.ts"
   },
-  "files": [
-    "lib"
-  ],
+  "files": ["lib", "./coverage.svg"],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/renzp94/storage.git"
   },
-  "keywords": [
-    "localStorage",
-    "helper"
-  ],
+  "keywords": ["localStorage", "helper"],
   "author": "renzp <1074720760.qq.com>",
   "license": "MIT",
   "bugs": {
@@ -31,7 +27,7 @@
   "homepage": "https://github.com/renzp94/storage#readme",
   "devDependencies": {
     "@biomejs/biome": "^1.4.1",
-    "@happy-dom/global-registrator": "^12.10.3",
+    "@happy-dom/global-registrator": "^14.12.0",
     "bun-plugin-dts": "^0.2.3",
     "bun-types": "^1.1.5",
     "standard-version": "^9.5.0",
