build: 移除无用脚本命令

--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "build": "bun run scripts/build.ts",
     "pub:npm": "bun run scripts/pub-npm.ts",
     "pub:jsr": "bun run scripts/pub-jsr.ts",
-    "pub:all": "bun run scripts/pub-all.ts",
-    "pub": "npm run build && standard-version && npm publish"
+    "pub:all": "bun run scripts/pub-all.ts"
   },
   "files": ["lib"],
   "repository": {
